Re-implement Dynatrace-Collector.