@@ -1,44 +1,32 @@
 #!/bin/bash
-
-DT_COLLECTOR_NAME="dtcollector"
-DT_COLLECTOR_LOG_DIR="/tmp/log/${DT_COLLECTOR_NAME}"
-
-DT_COLLECTOR_SERVER="127.0.0.1:6698"
-DT_COLLECTOR_AGENT_PORT="9998"
-DT_COLLECTOR_LOCAL_AGENT_PORT=$DT_COLLECTOR_AGENT_PORT
+DT_COLLECTOR_NAME=${DT_COLLECTOR_NAME:-"dtcollector"}
+DT_COLLECTOR_HOST_NAME=${DT_COLLECTOR_HOST_NAME:-"docker-${DT_COLLECTOR_NAME}"}
+DT_COLLECTOR_HOST_LOG_DIR=${DT_COLLECTOR_HOST_LOG_DIR:-"/tmp/log/dynatrace/collectors/${DT_COLLECTOR_NAME}"}
+DT_COLLECTOR_SERVER=${DT_COLLECTOR_SERVER}
 
 # Make sure that the following attributes are set in accordance to the
 # Memory Configuration section of the Collector Configuration docs at
 # https://community.dynatrace.com/community/display/DOCDT62/Collector+Configuration.
-DT_COLLECTOR_JVM_XMS="2G"
-DT_COLLECTOR_JVM_XMX="2G"
-DT_COLLECTOR_JVM_PERM_SIZE="128m"
-DT_COLLECTOR_JVM_MAX_PERM_SIZE="128m"
+DT_COLLECTOR_JVM_XMS=${DT_COLLECTOR_JVM_XMS:-"2G"}
+DT_COLLECTOR_JVM_XMX=${DT_COLLECTOR_JVM_XMX:-"2G"}
+DT_COLLECTOR_JVM_PERM_SIZE=${DT_COLLECTOR_JVM_PERM_SIZE:-"128m"}
+DT_COLLECTOR_JVM_MAX_PERM_SIZE=${DT_COLLECTOR_JVM_MAX_PERM_SIZE:-"128m"}
 
-IMAGE_NAME=$DT_COLLECTOR_NAME
+echo "Creating Dynatrace Collector log directory at ${DT_COLLECTOR_HOST_LOG_DIR}"
+mkdir -p ${DT_COLLECTOR_HOST_LOG_DIR}
 
-
-echo "Creating shared log directory at ${DT_COLLECTOR_LOG_DIR}"
-mkdir -p ${DT_COLLECTOR_LOG_DIR}
-
-echo "Starting the Dynatrace Collector with Agent connections on port ${DT_COLLECTOR_AGENT_PORT}"
+echo "Starting the Dynatrace Collector: ${DT_COLLECTOR_NAME}"
 docker run \
-  --name ${IMAGE_NAME} \
-  --hostname ${IMAGE_NAME} \
-  -p 127.0.0.1:${DT_COLLECTOR_LOCAL_AGENT_PORT}:${DT_COLLECTOR_AGENT_PORT} \
-  -v ${DT_COLLECTOR_LOG_DIR}:/opt/dynatrace/log/collector/${DT_COLLECTOR_NAME} \
-  -d \
-  dynatrace/collector \
-  -instance ${DT_COLLECTOR_NAME} \
-  -listen ${DT_COLLECTOR_AGENT_PORT} \
-  -server ${DT_COLLECTOR_SERVER} \
-  -Xms${DT_COLLECTOR_JVM_XMS} \
-  -Xmx${DT_COLLECTOR_JVM_XMX} \
-  -XX:PermSize=${DT_COLLECTOR_JVM_PERM_SIZE} \
-  -XX:MaxPermSize=${DT_COLLECTOR_JVM_MAX_PERM_SIZE} \
-  "$@"
-
-if [ $? -ne 0 ]; then
-  echo "Failed to start the Dynatrace Collector."
-  exit 1
-fi
+  --name ${DT_COLLECTOR_NAME} \
+  --hostname ${DT_COLLECTOR_HOST_NAME} \
+  --link dtserver \
+  --env DT_COLLECTOR_NAME="${DT_COLLECTOR_NAME}" \
+  --env DT_COLLECTOR_HOST_NAME="${DT_COLLECTOR_HOST_NAME}" \
+  --env DT_COLLECTOR_SERVER="${DT_COLLECTOR_SERVER}" \
+  --env DT_COLLECTOR_JVM_XMS="${DT_COLLECTOR_JVM_XMS}" \
+  --env DT_COLLECTOR_JVM_XMX="${DT_COLLECTOR_JVM_XMX}" \
+  --env DT_COLLECTOR_JVM_PERM_SIZE="${DT_COLLECTOR_JVM_PERM_SIZE}" \
+  --env DT_COLLECTOR_JVM_MAX_PERM_SIZE="${DT_COLLECTOR_JVM_MAX_PERM_SIZE}" \
+  --volume ${DT_COLLECTOR_HOST_LOG_DIR}:/opt/dynatrace/log/collector/${DT_COLLECTOR_NAME} \
+  --publish-all \
+  dynatrace/collector
